[gd_scene load_steps=6 format=3 uid="uid://c0drd5npyrnoi"]

[ext_resource type="Script" path="res://scripts/profile_button.gd" id="1_5a1eg"]
[ext_resource type="Script" path="res://scripts/add_mods.gd" id="2_fjf2d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bfn4f"]
bg_color = Color(0.201527, 0.201527, 0.201526, 1)
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="Shader" id="Shader_lv28n"]
code = "shader_type canvas_item;

uniform vec4 color_gap: source_color = vec4(0.25);
uniform vec4 color_stripe: source_color = vec4(1.0, 0.75, 0.0, 1.0);
uniform float divisions = 16.0; // increase for more stripe density
uniform float stripe_bias = 2.0; // 1.0 means no stripes; 2.0 means stripes and gaps are equal size
uniform float speed = 0.03;
uniform float angle = 0.7854; // in radians


void fragment() {
    float w = cos(angle) * UV.x + sin(angle) * UV.y - speed * TIME;
    if (floor(mod(w * divisions, stripe_bias)) < 0.0001) {
        COLOR = color_gap;
    } else {
        COLOR = color_stripe;
	}
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ko7ml"]
resource_local_to_scene = true
shader = SubResource("Shader_lv28n")
shader_parameter/color_gap = Color(0.16, 0.11776, 0.0544, 1)
shader_parameter/color_stripe = Color(0.23, 0.185533, 0.138, 1)
shader_parameter/divisions = 2.81
shader_parameter/stripe_bias = 2.0
shader_parameter/speed = 0.06
shader_parameter/angle = 0.195

[node name="Panel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_bfn4f")
script = ExtResource("1_5a1eg")

[node name="Label" type="Label" parent="."]
layout_mode = 2
horizontal_alignment = 1

[node name="RightClick" type="PopupMenu" parent="."]
size = Vector2i(115, 116)
item_count = 4
item_0/text = "Add Mods"
item_1/text = "Open Folder"
item_1/id = 1
item_2/text = "Edit Name"
item_2/id = 2
item_3/text = "Delete"
item_3/id = 3

[node name="ChangeName" type="Window" parent="."]
title = "Edit Name"
initial_position = 1
size = Vector2i(425, 30)
visible = false
unresizable = true
force_native = true

[node name="NewName" type="LineEdit" parent="ChangeName"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_to_text_length = true

[node name="Stripes" type="Panel" parent="ChangeName"]
z_index = -100
material = SubResource("ShaderMaterial_ko7ml")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Darken" type="Panel" parent="ChangeName"]
z_index = -100
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="AddMods" type="Window" parent="."]
title = "Add Mods"
initial_position = 1
size = Vector2i(440, 160)
visible = false
unresizable = true
force_native = true
script = ExtResource("2_fjf2d")

[node name="TabContainer" type="TabContainer" parent="AddMods"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0
tab_focus_mode = 0

[node name="Drop" type="Control" parent="AddMods/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="Label" type="Label" parent="AddMods/TabContainer/Drop"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -189.5
offset_top = -11.5
offset_right = 189.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Drag and drop files into this window to add them"

[node name="Select" type="Control" parent="AddMods/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="SelectButton" type="Button" parent="AddMods/TabContainer/Select"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
text = "Select Files"

[node name="FileDialog" type="FileDialog" parent="AddMods/TabContainer/Select"]
title = "Open File(s)"
size = Vector2i(324, 180)
ok_button_text = "Open"
file_mode = 1
access = 2
use_native_dialog = true

[node name="Link" type="Control" parent="AddMods/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="AddMods/TabContainer/Link"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="LinkLineEdit" type="LineEdit" parent="AddMods/TabContainer/Link/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 1
placeholder_text = "Link Here"
alignment = 1
expand_to_text_length = true

[node name="LinkButton" type="Button" parent="AddMods/TabContainer/Link/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
text = "Download"

[node name="LinkStatus" type="Label" parent="AddMods/TabContainer/Link/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Not Downloading"
horizontal_alignment = 1

[node name="HTTPRequest" type="HTTPRequest" parent="AddMods/TabContainer/Link"]
unique_name_in_owner = true
use_threads = true

[node name="Stripes" type="Panel" parent="AddMods"]
z_index = -100
material = SubResource("ShaderMaterial_ko7ml")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Darken" type="Panel" parent="AddMods"]
z_index = -100
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="index_pressed" from="RightClick" to="." method="_on_right_click_index_pressed"]
[connection signal="mouse_exited" from="RightClick" to="." method="_on_right_click_mouse_exited"]
[connection signal="close_requested" from="ChangeName" to="." method="_on_change_name_close_requested"]
[connection signal="text_submitted" from="ChangeName/NewName" to="." method="_on_new_name_text_submitted"]
[connection signal="close_requested" from="AddMods" to="AddMods" method="_on_close_requested"]
[connection signal="files_dropped" from="AddMods" to="AddMods" method="_on_files_dropped"]
[connection signal="pressed" from="AddMods/TabContainer/Select/SelectButton" to="AddMods" method="_on_select_button_pressed"]
[connection signal="files_selected" from="AddMods/TabContainer/Select/FileDialog" to="AddMods" method="_on_file_dialog_files_selected"]
[connection signal="pressed" from="AddMods/TabContainer/Link/VBoxContainer/LinkButton" to="AddMods" method="_on_link_button_pressed"]
[connection signal="request_completed" from="AddMods/TabContainer/Link/HTTPRequest" to="AddMods" method="_on_http_request_request_completed"]
